# wyag

./: .ocamlformat  dune-project  wyag.opam
_build/: .digest-db  log
command/: dune  init.ml
dune.lock/: lock.dune
lib/: dune  file.ml  git_objects.ml  init.ml  repository.ml  utils.ml
test/: dune
wyag/: dune-project
wyag/_build/: log
